--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "15.6.1",
     "react-redux": "5.0.6",
     "react-router-dom": "4.1.1",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "redux-promise": "0.5.3"
   },
   "devDependencies": {
     "babel": "6.23.0",
