--- a/package.json
+++ b/package.json
@@ -1,45 +1,31 @@
 {
-  "name": "react-template-hot",
+  "name": "static-template-babel",
+  "version": "1.0.0",
   "author": "Zack Creach",
+  "license": "ISC",
   "scripts": {
-    "develop": "webpack-dev-server --progress",
-    "start": "NODE_ENV=production node server.js",
-    "build": "NODE_ENV=production webpack"
+    "start": "webpack -w"
   },
-  "dependencies": {
-    "axios": "0.16.2",
-    "prop-types": "15.5.10",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-redux": "5.0.6",
-    "react-router-dom": "4.1.1",
-    "redux": "3.7.2",
-    "redux-promise": "0.5.3"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel": "6.23.0",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-react": "6.24.1",
-    "css-hot-loader": "1.3.0",
-    "css-loader": "0.28.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "image-webpack-loader": "3.3.1",
-    "path": "0.12.7",
-    "postcss": "6.0.6",
-    "postcss-cssnext": "3.0.0",
-    "postcss-hexrgba": "0.2.1",
-    "postcss-import": "10.0.0",
-    "postcss-loader": "2.0.6",
-    "postcss-mixins": "6.0.1",
-    "postcss-nested": "2.0.2",
-    "postcss-simple-vars": "4.0.0",
-    "react-hot-loader": "3.0.0-beta.7",
-    "style-loader": "0.18.2",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "browser-sync": "2.18.13",
+    "browser-sync-webpack-plugin": "1.2.0",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.1",
+    "html-webpack-plugin": "2.30.1",
+    "postcss-cssnext": "3.0.2",
+    "postcss-hexrgba": "1.0.0",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "postcss-mixins": "6.1.1",
+    "postcss-nested": "2.1.2",
+    "postcss-simple-vars": "4.1.0",
+    "style-loader": "0.19.0",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.1",
+    "webpack": "3.8.1"
   }
 }
